--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,14 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
+    <title>Task App</title>
+  <link rel="stylesheet" href="/css/index.css">
+    </head>
   <body>
-      <<h1>Welcome Todo list</h1>
+      <h1>Welcome Todo list</h1>
 
-      <div class="list">
+      <div class="left-nav">
+        <ul>
+          <li>Inbox</li>
+
+          <div class="Projects">
+               <!-- Add build for hastags -->
+          </div>
+
+        </ul>
+      </div>
+      <div class="tasks">
           <ul>
+            <!-- This will be an ejs template -->
             <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
           </ul>
       </div>
   </body>
