--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,30 +1,142 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>Task App</title>
-  <link rel="stylesheet" href="/css/index.css">
+    <!-- views/partials/head.ejs -->
+    <meta charset="UTF-8">
+
+    <!-- CSS (load bootstrap from a CDN) -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="/css/index.css">
     </head>
-  <body>
-      <h1>Welcome Todo list</h1>
+  <body class="">
+    <header>
 
-      <div class="left-nav">
-        <ul>
-          <li>Inbox</li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">TODO</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="Projects">
-               <!-- Add build for hastags -->
-          </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+  </header>
+
+
+  <!-- Start of sidebar -->
+
+
+  <div class="wrapper">
+    <!-- Sidebar -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>Todo App</h3>
+        </div>
+
+        <ul class="list-unstyled components">
+            <p>Project manager</p>
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a href="#">Home 1</a>
+                    </li>
+                    <li>
+                        <a href="#">Home 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Home 3</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Account</a>
+            </li>
+            <li>
+                <a href="#tagSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Tags</a>
+                <ul class="collapse list-unstyled" id="tagSubmenu">
+                    <li>
+                        <a href="#">Tag 1</a>
+                    </li>
+                    <li>
+                        <a href="#">Tag 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Tag 3</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#prioSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Priorities</a>
+                <ul class="collapse list-unstyled" id="prioSubmenu">
+                    <li>
+                        <a href="#">User-defined 1</a>
+                    </li>
+                    <li>
+                        <a href="#">User-defined 2</a>
+                    </li>
+                    <li>
+                        <a href="#">User-defined 3</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
 
         </ul>
+
+    </nav>
+    <!-- End of sidebar -->
+
+    <div class="container" id="task-box">
+      <h1>Todo Tasks</h1>
+
+      <div class="task-cards">
+        <div class="card">
+          <div class="card-body">
+            Take out trash
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            Finish homework
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            Pay rent
+          </div>
+        </div>
+
+
+        <div class="card">
+          <div class="card-body">
+            Go to the store
+          </div>
+        </div>
+
       </div>
-      <div class="tasks">
-          <ul>
-            <!-- This will be an ejs template -->
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-          </ul>
-      </div>
+    </div>
+
+
+
   </body>
 </html>
