--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,23 +3,9 @@
     width: 100%;
 }
 
-#sidebar {
-    width: 250px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    z-index: 999;
-    background: #7386D5;
-    color: #fff;
-    transition: all 0.3s;
-}
-
-/*
-    ADDITIONAL DEMO STYLE, NOT IMPORTANT TO MAKE THINGS WORK BUT TO MAKE IT A BIT NICER :)
-*/
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+/* start of general */
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -39,13 +25,22 @@ a, a:hover, a:focus {
     text-decoration: none;
     transition: all 0.3s;
 }
+/* end of general */
 
+/* start of sidebar */
 #sidebar {
-    /* don't forget to add all the previously mentioned styles here too */
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
     background: #7386D5;
     color: #fff;
     transition: all 0.3s;
 }
+
+
 
 #sidebar .sidebar-header {
     padding: 20px;
@@ -76,20 +71,47 @@ a, a:hover, a:focus {
     color: #fff;
     background: #6d7fcc;
 }
+/* end of sidebar */
 
 
-/* Outer task box */
+/* Task conatiner */
 
 #task-box{
   margin-left: 25%;
 }
 
-.task-cards {
+#task-menu nav{
+  background-color: rgba(107,121,142, 0.3);
+/*
+  width: auto;
+  height: 15%;
+  margin-bottom: 3%;
+  margin-top: 2%;
+  border-color: black; */
+
 }
 
-.task-cards div {
+
+/* end of task container */
+
+/* individual tasks */
+div.task-cards p{
+  padding-top: 1.5%;
+  margin-left: 5%;
+  color: black;
 }
 
-.task-cards div:hover {
-    background-color: rgba(51, 170, 51, .1)
+div.form-check {
+  align-content: left;
 }
+
+.form-check-input{
+  /* Double-sized Checkboxes */
+  /* https://stackoverflow.com/questions/22743457/how-can-i-change-the-size-of-a-bootstrap-checkbox */
+-ms-transform: scale(1.5); /* IE */
+-moz-transform: scale(1.5); /* FF */
+-webkit-transform: scale(1.5); /* Safari and Chrome */
+-o-transform: scale(1.5); /* Opera */
+padding: 10px;
+}
+/* end of individual tasks */
