--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,8 +9,12 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+    <script
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/index.css">
+    <script src="/js/index.js" charset="utf-8"></script>
     </head>
   <body class="">
     <header>
@@ -30,10 +34,6 @@
               <a class="nav-link" href="#">Link</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
       </nav>
   </header>
@@ -104,19 +104,78 @@
     </nav>
     <!-- End of sidebar -->
 
+
+    <!-- Task area -->
+
     <div class="container" id="task-box">
       <h1>Todo Tasks</h1>
 
+      <div id="task-menu">
+        <nav id="task-nav" class="navbar navbar-expand-lg navbar-light bg-dark pull-right">
+            <form id="task-form-nav"class="form-inline ">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#myModal">Add Task</button>
+              <button type="button" id="delete-btn" class="btn btn-danger disabled">Delete</button>
+            </form>
+          </nav>
+        </div>
+
+
+  <!-- The Modal -->
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Create a task</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+          <form>
+              <div class="form-group">
+                <label for="task_name">Task Name</label>
+                <input type="text" class="form-control" id="task_name" placeholder="Enter task name">
+              </div>
+              <div class="form-group">
+                <label for="task_des">Description</label>
+                <input type="text" class="form-control" id="task_des" placeholder="Description">
+              </div>
+            </form>
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button class="btn btn-success my-2 my-sm-0" type="submit">Add</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
+      <!-- Holds all tasks -->
       <div class="task-cards">
         <div class="card">
           <div class="card-body">
-            Take out trash
+            <div class="form-check form-inline">
+              <input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
+              <p><strong> Take out trash </strong></p>
+            </div>
           </div>
         </div>
 
         <div class="card">
           <div class="card-body">
-            Finish homework
+            <div class="form-check form-inline">
+              <input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
+              <p><strong> Finish HW </strong></p>
+            </div>
           </div>
         </div>
 
@@ -134,8 +193,10 @@
         </div>
 
       </div>
-    </div>
 
+      <!-- end of task container -->
+    </div>
+    <!-- End of task content -->
 
 
   </body>
