--- a/public/css/index.css
+++ b/public/css/index.css
@@ -96,22 +96,28 @@ a, a:hover, a:focus {
 
 /* individual tasks */
 div.task-cards p{
-  padding-top: 1.5%;
-  margin-left: 5%;
   color: black;
+}
+div.card :hover{
+  background-color: #d8d8d8;
 }
 
 div.form-check {
   align-content: left;
 }
 
-.form-check-input{
-  /* Double-sized Checkboxes */
-  /* https://stackoverflow.com/questions/22743457/how-can-i-change-the-size-of-a-bootstrap-checkbox */
--ms-transform: scale(1.5); /* IE */
--moz-transform: scale(1.5); /* FF */
--webkit-transform: scale(1.5); /* Safari and Chrome */
--o-transform: scale(1.5); /* Opera */
-padding: 10px;
-}
+
+a.btn:hover {
+     -webkit-transform: scale(.8);
+     -moz-transform: scale(.8);
+     -o-transform: scale(.8);
+ }
+ a.btn {
+     -webkit-transform: scale(0.8);
+     -moz-transform: scale(0.8);
+     -o-transform: scale(0.8);
+     -webkit-transition-duration: 0.5s;
+     -moz-transition-duration: 0.5s;
+     -o-transition-duration: 0.5s;
+ }
 /* end of individual tasks */
