--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -116,7 +116,7 @@
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#myModal">Add Task</button>
-              <button type="button" id="delete-btn" class="btn btn-danger disabled">Delete</button>
+
             </form>
           </nav>
         </div>
@@ -157,40 +157,61 @@
     </div>
   </div>
 
-
+<!-- End of Modal -->
 
       <!-- Holds all tasks -->
       <div class="task-cards">
+
         <div class="card">
           <div class="card-body">
-            <div class="form-check form-inline">
-              <input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
+            <p><strong> Finish HW </strong></p>
+            <div class="button-group">
+                </div>
+                <a href="#" class="btn btn-danger a-btn-slide-text">
+                   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    <span><strong>Delete</strong></span>
+                </a>
+                <a href="#" class="btn btn-primary a-btn-slide-text">
+                   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    <span><strong>Complete</strong></span>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
               <p><strong> Take out trash </strong></p>
-            </div>
+              <div class="button-group">
+                  </div>
+                  <a href="#" class="btn btn-danger a-btn-slide-text">
+                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                      <span><strong>Delete</strong></span>
+                  </a>
+                  <a href="#" class="btn btn-primary a-btn-slide-text">
+                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                      <span><strong>Complete</strong></span>
+                  </a>
+              </div>
           </div>
         </div>
 
         <div class="card">
           <div class="card-body">
-            <div class="form-check form-inline">
-              <input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
-              <p><strong> Finish HW </strong></p>
-            </div>
+              <p><strong> Pay Rent </strong></p>
+              <div class="button-group">
+                  </div>
+                  <a href="#" class="btn btn-danger a-btn-slide-text">
+                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                      <span><strong>Delete</strong></span>
+                  </a>
+                  <a href="#" class="btn btn-primary a-btn-slide-text">
+                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                      <span><strong>Complete</strong></span>
+                  </a>
+              </div>
           </div>
         </div>
 
-        <div class="card">
-          <div class="card-body">
-            Pay rent
-          </div>
-        </div>
-
-
-        <div class="card">
-          <div class="card-body">
-            Go to the store
-          </div>
-        </div>
 
       </div>
 
