--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,3 +12,4 @@
     crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/css/index.css">
 <script src="/js/index.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/jquery.tablesorter.min.js" integrity="sha256-WX1A5tGpPfZZ48PgoZX2vpOojjCXsytpCvgPcRPnFKU=" crossorigin="anonymous"></script>
