add task viewing

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,17 +3,17 @@
 
 <head>
     <!-- Adds all the importing of libs -->
-    <%- include('../partials/head') -%>
+    <%- include('../partials/Head') -%>
 </head>
 
 <body class="">
     <header>
 
-        <%- include('../partials/index/header') -%>
+        <%- include('../partials/index/Header') -%>
     </header>
 
     <!-- Start of sidebar -->
-    <%- include('../partials/index/sidebar') -%>
+    <%- include('../partials/index/Sidebar') -%>
         <!-- End of sidebar -->
 
         <!-- Task area -->
@@ -22,13 +22,16 @@
             <h1>Todo Tasks</h1>
 
             <!-- Form submit overlay -->
-            <%- include('../partials/index/modal') -%>
+            <%- include('../partials/index/AddTaskModal') -%>
 
-            <!-- Indivual task overlay -->
-            <%- include('../partials/index/task_modal') -%>
+
 
                 <!-- Dark nav bar used for searching and adding tasks -->
-                <%- include('../partials/index/task_menu') -%>
+                <%- include('../partials/index/TaskMenu') -%>
+
+                <% tasks.forEach(function(task, i) { %>
+                  <%- include('../partials/index/TaskModal', {modal_name:"taskModal"+i, task:task}) -%>
+              <% }); %>
 
                     <!-- Holds all tasks -->
                     <div class="task-cards">
@@ -45,21 +48,20 @@
                             </thead>
 
                             <tbody>
-                                <% for(var i=0; i < 3; i++) { %>
-                                    <tr>
-                                        <th scope="row">
-                                            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-                                        </th>
-                                        <td> <%= i %> Take out the trash</td>
-                                        <td><%= i %></td>
-                                        <td>Low</td>
-                                        <td><button type="button" class="btn-sm btn-info" data-toggle="modal" data-target="#taskModal">Info</button></td>
+                              <% tasks.forEach(function(task, i) { %>
+                                 <td><%= task.date_created %> </td>
+                                 <td><%= task.title %> </td>
+                                 <td><%= task.date_due %> </td>
+                                 <td><%= task.priority %> </td>
+                                 <td><button type="button" class="btn-sm btn-info" data-toggle="modal" data-target="#taskModal<%=i%>">Info</button></td>
+                                 <!-- Indivual task overlay -->
 
-                                    </tr>
-                                    <% } %>
+                             <% }); %>
                             </tbody>
 
                         </table>
+
+
 
                     </div>
 
