--- a/views/partials/index/AddTaskModal.ejs
+++ b/views/partials/index/AddTaskModal.ejs
@@ -1,6 +1,6 @@
 
   <!-- The Modal -->
-  <div class="modal" id="myModal">
+  <div class="modal" id="addTaskModal">
     <div class="modal-dialog">
       <div class="modal-content">
 
