--- a/views/partials/index/TaskMenu.ejs
+++ b/views/partials/index/TaskMenu.ejs
@@ -3,7 +3,7 @@
       <form id="task-form-nav"class="form-inline ">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#myModal">Add Task</button>
+        <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#addTaskModal">Add Task</button>
         <a href="#">
           <span class="glyphicon glyphicon-triangle-bottom"></span>
         </a>
