--- a/views/partials/index/TaskModal.ejs
+++ b/views/partials/index/TaskModal.ejs
@@ -1,15 +1,15 @@
 
-<div class="modal fade" id="taskModal" tabindex="-1" role="dialog" aria-labelledby="taskModalLabel" aria-hidden="true">
+<div class="modal fade" id="<%=modal_name%>" tabindex="-1" role="dialog" aria-labelledby="<%=modal_name%>Label" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="taskModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="<%=modal_name%>ModalLabel"><%=task.title%></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-          <p>More info about the task</p>
+          <p><%=task.description%></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
