--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,7 @@
 <head>
     <!-- Adds all the importing of libs -->
     <%- include('../partials/Head') -%>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body class="">
