--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -25,6 +25,8 @@
 
           <!-- Remind Passowrd -->
           <div id="formFooter">
+            <a class="underlineHover" href="#">Create an Account</a>
+            <br>
             <a class="underlineHover" href="#">Forgot Password?</a>
           </div>
 
