--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,11 +27,13 @@
 
 
 
+
                 <!-- Dark nav bar used for searching and adding tasks -->
                 <%- include('../partials/index/TaskMenu') -%>
 
                 <% tasks.forEach(function(task, i) { %>
-                  <%- include('../partials/index/TaskModal', {modal_name:"taskModal"+i, task:task}) -%>
+                  <%- include('../partials/index/TaskModal', {modal_name_task:"taskModal"+i, modal_name_edit:"editModal"+i, task:task}) -%>
+                  <%- include('../partials/index/EditTaskModal', {modal_name:"editModal"+i,task:task}) -%>
               <% }); %>
 
                     <!-- Holds all tasks -->
@@ -65,6 +67,7 @@
                                  <td><button type="button" class="btn-sm btn-info" data-toggle="modal" data-target="#taskModal<%=i%>">Info</button></td>
                                  <td style="display: none;">asdasd</td>
                                  <!-- Indivual task overlay -->
+
 
                              <% }); %>
                             </tbody>
