--- a/views/partials/index/TaskModal.ejs
+++ b/views/partials/index/TaskModal.ejs
@@ -1,17 +1,30 @@
 
-<div class="modal fade" id="<%=modal_name%>" tabindex="-1" role="dialog" aria-labelledby="<%=modal_name%>Label" aria-hidden="true">
+<div class="modal fade" id="<%=modal_name_task%>" tabindex="-1" role="dialog" aria-labelledby="<%=modal_name_task%>Label" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="<%=modal_name%>ModalLabel"><%=task.title%></h5>
+        <h5 class="modal-title" id="<%=modal_name_task%>ModalLabel"><%=task.title%></h5>
+        <div class="task-progress">
+          <label for="progress">Prog</label>
+          <progress id="" value="50" max="100"> 32% </progress>
+        </div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+
       </div>
       <div class="modal-body">
+        <input type="text" name="" value="">
           <p><%=task.description%></p>
+          <p><%= task.date_created %> </p>
+          <p><%= task.title %> </p>
+          <p><%= task.date_due %> </p>
+          <p><%= task.priority %> </p>
       </div>
+
+
       <div class="modal-footer">
+        <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#<%=modal_name_edit%>">Edit </button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
