--- a/views/partials/index/AddTaskModal.ejs
+++ b/views/partials/index/AddTaskModal.ejs
@@ -15,7 +15,7 @@
           <form action="/task" enctype='application/json' method="POST" name="taskForm">
               <div class="form-group">
 
-
+                <input type="hidden" name="status" value="open">
                 <label for="title">Task Title</label>
                 <input type="text" class="form-control" name="title" id="title" placeholder="Enter task name">
                 <br>
