--- a/views/partials/index/EditTaskModal.ejs
+++ b/views/partials/index/EditTaskModal.ejs
@@ -12,27 +12,25 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-          <form action="/task" enctype='application/json' method="POST" name="taskForm">
+          <form action="/task/<%= task.uid %>"" enctype='application/json' method="POST" name="taskForm">
               <div class="form-group">
 
-
-
-
+                <input type="hidden" name="status" value="open">
                 <label for="title">Task Title</label>
-                <input type="text" class="form-control" name="title" id="title" placeholder="<%= task.title %>">
+                <input type="text" class="form-control" value="<%= task.title %>" name="title" id="title" placeholder="<%= task.title %>">
                 <br>
                 <br>
                 <label for="date_due">Date Due</label>
-                <input type="date" id="date_due" onfocus="(this.type='date')" name="date_due" placeholder="<%= task.date_due %>">
+                <input type="date" id="date_due"  value="<%= task.date_due %>" name="date_due">
                 <br>
                 <br>
 
                 <label for="description">Description</label>
-                <input type="text" class="form-control" name="description" id="description" placeholder="<%=task.description%>">
+                <input type="text" class="form-control" value="<%=task.description%>" name="description" id="description" placeholder="<%=task.description%>">
 
 
                 <label for="priority">Choose a priority:</label>
-                <select id="priority" name="priority" placeholder="<%= task.priority %>">
+                <select id="priority" name="priority" value="<%= task.priority %>">
                   <option value="high">High</option>
                   <option value="meidum">Medium</option>
                   <option value="low">Low</option>
@@ -41,7 +39,7 @@
 
 
                 <label for="tags">Task Tags</label>
-                <input type="text" class="form-control" name="tags" id="tags" placeholder="none">
+                <input type="text" class="form-control" name="tags" id="tags" value="">
               </div>
 
               <input class="btn btn-success my-2 my-sm-0" value="Submit" type="submit">
