--- a/views/partials/index/TaskMenu.ejs
+++ b/views/partials/index/TaskMenu.ejs
@@ -1,7 +1,7 @@
 <div id="task-menu">
-  <nav id="task-nav" class="navbar navbar-expand-lg navbar-light bg-dark pull-right">
-      <form id="task-form-nav"class="form-inline ">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+  <nav id="task-nav"   class="navbar navbar-expand-lg navbar-light bg-dark pull-right">
+      <form action="/tasks/search"  method="GET" id="task-form-nav"class="form-inline ">
+        <input class="form-control mr-sm-2" name ="search" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#addTaskModal">Add Task</button>
         <a href="#">
