--- a/views/partials/index/TaskModal.ejs
+++ b/views/partials/index/TaskModal.ejs
@@ -23,6 +23,7 @@
 
 
       <div class="modal-footer">
+        <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#<%=modal_name_sub%>">Sub </button>
         <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#<%=modal_name_edit%>">Edit </button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
