--- a/views/partials/index/SubTaskModal.ejs
+++ b/views/partials/index/SubTaskModal.ejs
@@ -12,11 +12,9 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-          <form action="/task/<%= task.uid %>"" enctype='application/json' method="POST" name="taskForm">
+          <form action="/task/<%= task.uid %>/subtask"" enctype='application/json' method="POST" name="taskForm">
               <div class="form-group">
-
-                <input type="hidden" name="status" value="open">
-                <label for="title">Task Title</label>
+                <label for="title">Sub Task Title</label>
                 <input type="text" class="form-control" value="<%= task.title %>" name="title" id="title" placeholder="<%= task.title %>">
               </div>
 
