Adding subtask views

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -138,6 +138,46 @@ div.task-progress progress{
 div.modal progress::-moz-progress-bar { background: #7386D5;  }
 
 
+/* Modal Task CSS */
+div.modal-body{
+    color: #000;
+
+}
+
+div.modal-body label{
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+
+div.modal-body p{
+    font-size: 20px;
+    color: black;
+}
+
+div.subtask-container{
+    background:#ededed ;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    border: 1px solid black;
+}
+
+.subtask-list{
+    padding-top: 5%;
+    list-style-type: none;
+}
+
+.subtask-list button{
+    margin-right: 5%;
+    margin-bottom: 2%;
+}
+
+
+
+
+
 
 /* End of task Modal */
 
