--- a/views/partials/index/SubTaskModal.ejs
+++ b/views/partials/index/SubTaskModal.ejs
@@ -15,7 +15,7 @@
           <form action="/task/<%= task.uid %>/subtask"" enctype='application/json' method="POST" name="taskForm">
               <div class="form-group">
                 <label for="title">Sub Task Title</label>
-                <input type="text" class="form-control" value="<%= task.title %>" name="title" id="title" placeholder="<%= task.title %>">
+                <input type="text" class="form-control" value="" name="title" id="title" placeholder="Add a subtask">
               </div>
 
               <input class="btn btn-success my-2 my-sm-0" value="Submit" type="submit">
