More Ui changes

--- a/views/partials/index/AddTaskModal.ejs
+++ b/views/partials/index/AddTaskModal.ejs
@@ -32,7 +32,7 @@
                 <label for="priority">Choose a priority:</label>
                 <select id="priority" name="priority">
                   <option value="high">High</option>
-                  <option value="meidum">Medium</option>
+                  <option value="medium">Medium</option>
                   <option value="low">Low</option>
                 </select>
                 <br>
