--- a/public/css/index.css
+++ b/public/css/index.css
@@ -78,16 +78,17 @@ a, a:hover, a:focus {
 
 #task-box{
   margin-left: 25%;
+  width: 90%;
 }
 
 #task-menu nav{
-  background-color: rgba(107,121,142, 0.3);
-/*
+  /* background-color: rgba(107,121,142, 0.3); */
+
   width: auto;
-  height: 15%;
+  height: 70%;
   margin-bottom: 3%;
   margin-top: 2%;
-  border-color: black; */
+  border-color: black;
 
 }
 
