Added tag support

--- a/views/partials/index/Sidebar.ejs
+++ b/views/partials/index/Sidebar.ejs
@@ -17,13 +17,13 @@
                 <a href="#tagSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Tags</a>
                 <ul class="collapse list-unstyled" id="tagSubmenu">
                     <li>
-                        <a href="#">Tag 1</a>
+                        <a href="/tasks/search?search=school">School</a>
                     </li>
                     <li>
-                        <a href="#">Tag 2</a>
+                        <a href="/tasks/search?search=work">Work</a>
                     </li>
                     <li>
-                        <a href="#">Tag 3</a>
+                        <a href="/tasks/search?search=personal">Personal</a>
                     </li>
                 </ul>
             </li>
