--- a/views/partials/index/AddTaskModal.ejs
+++ b/views/partials/index/AddTaskModal.ejs
@@ -38,8 +38,12 @@
                 <br>
 
 
-                <label for="tags">Task Tags</label>
-                <input type="text" class="form-control" name="tags" id="tags" placeholder="none">
+                <label for="tag">Task Tags</label>
+                <select id="priority" name="tag">
+                  <option value="school">School</option>
+                  <option value="work">Work</option>
+                  <option value="personal">Personal</option>
+                </select>
               </div>
 
               <input class="btn btn-success my-2 my-sm-0" value="Submit" type="submit" onclic()">
