--- a/views/partials/index/TaskModal.ejs
+++ b/views/partials/index/TaskModal.ejs
@@ -23,6 +23,9 @@
 
         <label>Priority</label>
         <p><%= task.priority %> </p>
+
+        <label>Tag</label>
+        <p><%= task.tag %> </p>
       </div>
 
       <div class="subtask-container">
