--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,7 @@
     <!-- Adds all the importing of libs -->
     <%- include('../partials/Head') -%>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/task.css">
 </head>
 
 <body class="">
