--- a/views/partials/index/Sidebar.ejs
+++ b/views/partials/index/Sidebar.ejs
@@ -8,7 +8,7 @@
         </div>
 
         <ul class="list-unstyled components">
-            <p>Project manager</p>
+            <p>CS_160 Task List</p>
             <li class="active">
                 <a href="/tasks">Home</a>
             </li>
