--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,8 +4,9 @@
 <head>
     <!-- Adds all the importing of libs -->
     <%- include('../partials/Head') -%>
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/task.css">
+    <link rel="stylesheet" href="/css/index/index.css">
+    <link rel="stylesheet" href="/css/index/task.css">
+    <link rel="stylesheet" href="/css/index/sidebar.css">
 </head>
 
 <body class="">
