Added a register page. Still need hooked up

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -25,9 +25,9 @@
 
           <!-- Remind Passowrd -->
           <div id="formFooter">
-            <a class="underlineHover" href="#">Create an Account</a>
+            <a class="underlineHover" href="/login/register">Create an Account</a>
             <br>
-            <a class="underlineHover" href="#">Forgot Password?</a>
+         
           </div>
 
         </div>
