Updating more styles

--- a/public/css/index/task.css
+++ b/public/css/index/task.css
@@ -56,6 +56,62 @@
       padding-top: 5%;;
       list-style-type: none;
   }
+
+
+  .checkbox-circle-sub{
+    list-style-type: none;
+    display: inline;
+  }
+
+  .checkbox-circle-sub li{
+    display: inline;
+    margin-left: 10px;
+    
+  }
+
+    
+  #checkmark-sub {
+    display:inline-block;
+    width: 30px;
+    height:30px;
+    background: white;
+    border-radius:50%;
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+    transform: rotate(45deg);
+    
+}
+
+
+
+#checkmark-sub:before{
+    content:"";
+    position: absolute;
+    width:3px;
+    height:13px;
+    background-color:black;
+    left:15px;
+    top:8px;
+}
+
+#checkmark-sub:after{
+    content:"";
+    position: absolute;
+    width:7px;
+    height:3px;
+    background-color:black;
+    left:10px;
+    top:18px;
+}
+
+#checkmark-sub:hover{
+    background-color: #7386d5;
+}
+
+
+
+
+
   
   #checkmark {
       display:inline-block;
@@ -145,4 +201,6 @@
       margin-right: 5%;
       margin-bottom: 2%;
   }
+  
+
   
