--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/css/index/index.css">
     <link rel="stylesheet" href="/css/index/task.css">
     <link rel="stylesheet" href="/css/index/sidebar.css">
+    <link rel="stylesheet" href="/css/Modal/AddTask.css">
+    
+    
+    
 </head>
 
 <body class="">
@@ -22,12 +26,10 @@
         <!-- Task area -->
 
         <div class="container" id="task-box">
-            <h1>Todo Tasks</h1>
+            <h1>Taskist</h1>
 
             <!-- Form submit overlay -->
             <%- include('../partials/index/AddTaskModal') -%>
-
-
 
 
                 <!-- Dark nav bar used for searching and adding tasks -->
