--- a/views/partials/index/Sidebar.ejs
+++ b/views/partials/index/Sidebar.ejs
@@ -4,7 +4,7 @@
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>Todo App</h3>
+            <h3>Taskist</h3>
         </div>
 
         <ul class="list-unstyled components">
