--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -17,12 +17,12 @@
 			    			<div class="row">
 			    				<div class="col-xs-6 col-sm-6 col-md-6">
 			    					<div class="form-group">
-			                <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
+			                <input type="text" name="firstname" id="firstname" class="form-control input-sm" placeholder="First Name">
 			    					</div>
 			    				</div>
 			    				<div class="col-xs-6 col-sm-6 col-md-6">
 			    					<div class="form-group">
-			    						<input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name">
+			    						<input type="text" name="lastname" id="lastname" class="form-control input-sm" placeholder="Last Name">
 			    					</div>
 			    				</div>
 			    			</div>
