User sessions not control data returned by db.

--- a/views/partials/index/Sidebar.ejs
+++ b/views/partials/index/Sidebar.ejs
@@ -46,7 +46,7 @@
 
 
             <li class="active">
-                <a href="/login">Logout</a>
+                <a href="/logout">Logout</a>
             </li>
 
         </ul>
